testsuite/tests/rep-poly/RepPolyBackpack1.stderr
[1 of 1] Processing number-unknown
  [1 of 2] Compiling NumberUnknown[sig] ( number-unknown\NumberUnknown.hsig, nothing )
  [2 of 2] Compiling NumberStuff      ( number-unknown\NumberStuff.hs, nothing )

RepPolyBackpack1.bkp:17:5: error:
    The first pattern in the equation for ‘funcA’
    does not have a fixed runtime representation.
    Its type is:
      Number l :: TYPE (Rep l)

RepPolyBackpack1.bkp:17:22: error:
    • The function argument
        ‘x’
      does not have a fixed runtime representation.
      Its type is:
        Number l :: TYPE (Rep l)
    • In the first argument of ‘plus’, namely ‘x’
      In the expression: plus x (multiply x y)
      In an equation for ‘funcA’: funcA x y = plus x (multiply x y)

RepPolyBackpack1.bkp:17:24: error:
    • The function argument
        ‘(multiply x y)’
      does not have a fixed runtime representation.
      Its type is:
        Number l :: TYPE (Rep l)
    • In the second argument of ‘plus’, namely ‘(multiply x y)’
      In the expression: plus x (multiply x y)
      In an equation for ‘funcA’: funcA x y = plus x (multiply x y)

RepPolyBackpack1.bkp:17:34: error:
    • The function argument
        ‘x’
      does not have a fixed runtime representation.
      Its type is:
        Number l :: TYPE (Rep l)
    • In the first argument of ‘multiply’, namely ‘x’
      In the second argument of ‘plus’, namely ‘(multiply x y)’
      In the expression: plus x (multiply x y)

RepPolyBackpack1.bkp:17:36: error:
    • The function argument
        ‘y’
      does not have a fixed runtime representation.
      Its type is:
        Number l :: TYPE (Rep l)
    • In the second argument of ‘multiply’, namely ‘y’
      In the second argument of ‘plus’, namely ‘(multiply x y)’
      In the expression: plus x (multiply x y)
